--- a/render/style.css
+++ b/render/style.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.appbutton {
+.appbutton, .controlbutton {
     margin: 20px;
     width: 300px;
     height: 40px;
