--- a/render/style.css
+++ b/render/style.css
@@ -1,8 +1,72 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    overflow-y: scroll;
+    font: 900 18px/1.5 Verdana;
 }
 
-.appbutton, .controlbutton {
+button {
+    display: block;
+    background-color: #007784;
+    color: #FFF;
+    cursor: pointer;
+    width: 97%;
+    border: 2px solid #000;
+    border-radius: 15px;
+    text-align: center;
+    outline: none;
+    margin: 3px auto 0;
+    padding: 3px 7px;
+    font: inherit;
+}
+
+.collapsible.active {
+    border-radius: 15px 15px 0px 0px;
+    border-bottom: 0px;
+}
+
+.collapsible:hover,
+.all:hover {
+    background-color: #0066FF;
+}
+
+.content {
+    padding: 0;
+    width: 96.25%;
+    display: block;
+    overflow: hidden;
+    border: 2px solid #000;
+    border-top: 0px;
+    background-color: #FFF;
+    border-radius: 0px 0px 15px 15px;
+    margin: 0 auto;
+    font: 500 16px/1.5 Arial;
+}
+
+.hide {
+    display: none;
+}
+
+.trials {
+    width: 100%;
+    table-layout: fixed;
+    border-spacing: 0px;
+}
+
+td {
+    width: 33%;
+    padding: 1.5px;
+    text-align: center;
+}
+
+.all::before {
+    content: 'Show ';
+}
+
+.all.active::before {
+    content: 'Hide ';
+}
+
+.appbutton,
+.controlbutton {
     margin: 20px;
     width: 300px;
     height: 40px;
@@ -13,27 +77,3 @@ body {
     font-size: 18px;
     cursor: pointer;
 }
-
-.collapsible {
-    background-color: #777;
-    color: white;
-    cursor: pointer;
-    padding: 18px;
-    width: 100%;
-    border: none;
-    text-align: left;
-    outline: none;
-    font-size: 15px;
-  }
-  
-  .active, .collapsible:hover {
-    background-color: #555;
-  }
-  
-  .content {
-    padding: 0 18px;
-    max-height: 0;
-    overflow: hidden;
-    transition: max-height 0.2s ease-out;
-    background-color: #f1f1f1;
-  }
