--- a/render/style.css
+++ b/render/style.css
@@ -1,9 +1,10 @@
 :root {
-    --background_color : #23616D;
-    --button_color : #2F236D;
-    --error_state : rgb(230, 58, 54);
-    --running_state : #236D2F;
-    --highlight : #54236D;
+    --background_color : #b2b4b2;
+    --drawer_color: #514689;
+    --button_color : #54585a;
+    --error_state : #C1121C;
+    --running_state : #007243;
+    --highlight :  #a7a4e0;
 }
 
 
@@ -15,11 +16,11 @@ body {
 
 button {
     display: block;
-    background-color: var(--button_color);
+    background-color: var(--drawer_color);
     color: #FFF;
     cursor: pointer;
     width: 97%;
-    border: 2px solid #FFF;
+    border: 2px solid var(--button_color);
     border-radius: 15px;
     text-align: center;
     outline: none;
@@ -43,12 +44,12 @@ button {
     width: 96.25%;
     display: block;
     overflow: hidden;
-    border: 2px solid #FFF;
+    border: 2px solid var(--button_color);
     border-top: 0px;
     background-color: var(--background_color);
     border-radius: 0px 0px 15px 15px;
     margin: 0 auto;
-    font: 500 16px/1.5 Verdana ;
+    font: 900 16px/1.5 Verdana ;
 }
 
 .hide {
@@ -71,7 +72,7 @@ td {
 
 .appbutton,
 .controlbutton {
-    margin: 20px;
+    margin: 10px;
     width: 300px;
     height: 40px;
     border: none;
@@ -80,6 +81,7 @@ td {
     color: #FFF;
     font-size: 18px;
     cursor: pointer;
+    display: table-cell;
 }
 
 pre {
@@ -87,5 +89,5 @@ pre {
     font-family: Verdana ;
     white-space: pre;
     margin: 1em 0;
-    color: #FFF;
+    color: #000;
   }
